<resources>
    <string name="app_name">AppsMoviles</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_el_nombre_de_la_mascota">Ingrese el nombre de la mascota</string>
    <string name="especie">Especie</string>
    <string name="algo">Algo</string>
    <string name="sexo">Sexo</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="mascotas">Mascotas</string>
    <string name="Especie">Especie</string>
    <string name="Raza">Raza</string>
    <string name="Ingrese_Raza">Ingrese Raza</string>
    <string name="Color">Color</string>
    <string name="Ingrese_Color">Ingrese Color</string>
    <string name="Observaciones">Observaciones</string>
    <string name="extended_fab_label">Agregar</string>
    <string name="ingresar_recordatorio">Ingresar Recordatorio</string>
    <string name="ingresar_fecha">Fecha</string>
    <string name="ingresar_subtitulo">Observaciones</string>
    <string name="dateFormat">dateFormat</string>
    <string name="Editar">Editar</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="extended_edit_pet_buttom">Editar</string>
    <string name="archivos">Archivos</string>
</resources>