<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5dde5"
    tools:context=".PetAdd">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#ff98ba">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#5b1a04"
            android:animateLayoutChanges="true"
            android:text="@string/mascotas"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="30sp"
            android:gravity="center"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/corner_radius"
        android:layout_margin="30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:textColor="#f85f6a"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/nombre"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/ingrese_el_nombre_de_la_mascota"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/especie"
                android:textColor="#f85f6a"
                android:fontFamily="@font/quicksand_bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/algo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sexo"
                android:textColor="#f85f6a"
                android:fontFamily="@font/quicksand_bold"
                android:layout_weight="5"/>
            <Spinner
                android:id="@+id/planets_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="selecciona algo"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textColor="#f85f6a"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/fecha_de_nacimiento"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Algo">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff98ba"
        android:layout_weight="4">
        <ImageButton
            android:id="@+id/recordatorio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:background="#ff98ba"
            android:src="@drawable/calendar"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:background="#ff98ba"
            android:src="@drawable/huella"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:background="#ff98ba"
            android:src="@drawable/setting"/>
    </LinearLayout>
</LinearLayout>