<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5dde5"
    tools:context=".RecordatorioAdd">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#ff98ba">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#5b1a04"
            android:animateLayoutChanges="true"
            android:text="@string/recordatorios"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="30sp"
            android:gravity="center"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/corner_radius"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/ingresar_recordatorio"
                    android:textColor="#f85f6a" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/ingresar_recordatorio">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#5b1a04"
            android:text="@string/extended_fab_label"
            app:backgroundTint="#f85f6a"
            android:layout_margin="16dp"
            app:icon="@drawable/plus_icon_white" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff98ba"
        android:layout_weight="4">
        <ImageButton
            android:id="@+id/recordatorio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:background="#ff98ba"
            android:src="@drawable/calendar"/>
        <ImageButton
            android:id="@+id/principal_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:background="#ff98ba"
            android:src="@drawable/huella"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:background="#ff98ba"
            android:src="@drawable/setting"/>
    </LinearLayout>
</LinearLayout>